samples/_failures_safe/1761701226_a7b992_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0c7175c5.c: In function ‘main’:
./samples/SAFE/__tmp_0c7175c5.c:151:9: error: expected expression at end of input
  151 |         if (scanf("%d", &value) !=
      |         ^~
./samples/SAFE/__tmp_0c7175c5.c:151:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0c7175c5.c:151:9: error: expected declaration or statement at end of input
